--- a/themes/jaeger-docs/assets/sass/toc.sass
+++ b/themes/jaeger-docs/assets/sass/toc.sass
@@ -12,8 +12,9 @@ $left-border: 4px solid $jaeger-beige
 
 .toc
   z-index: 1
-  width: inherit
-  position: fixed
+  position: sticky
+  width: 100%
+  top: 30vh
   margin: 0
   padding: 0
 
